--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -73,11 +73,11 @@ templ modal() {
 var input = `
 	border border-neutral-500 grow
 	outline-none focus:border-cerise-strong hover:border-cerise-light
-	bg-slate-800 p-1.5 rounded h-8
+	bg-slate-800 p-1.5 rounded leading-tight
 `
 
 var button = `
-	bg-[#3f4c66] p-1 h-8 block rounded border text-center
+	bg-[#3f4c66] p-1 leading-tight block rounded border text-center
 	select-none border-transparent outline-none
 	enabled:focus:border-cerise-strong enabled:hover:border-cerise-light
 	disabled:text-gray-500
@@ -94,7 +94,7 @@ var roundButton = `
 var selectStyle = `
 	border border-neutral-500
 	outline-none focus:border-cerise-strong hover:border-cerise-light
-	bg-slate-800 p-1.5 rounded h-8
+	bg-slate-800 p-1.5 rounded leading-tight
 `
 
 templ base64Helpers() {
