--- a/pkg/static/public/style.dist.css
+++ b/pkg/static/public/style.dist.css
@@ -558,12 +558,36 @@ html {
   font-family: lato, sans-serif;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .static {
   position: static;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
+}
+
+.inset-1 {
+  inset: 0.25rem;
+}
+
+.inset-0\.5 {
+  inset: 0.125rem;
+}
+
+.inset-\[3px\] {
+  inset: 3px;
+}
+
+.inset-\[2px\] {
+  inset: 2px;
 }
 
 .col-span-full {
@@ -578,8 +602,28 @@ html {
   margin-top: 0.25rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -630,6 +674,18 @@ html {
   height: 100%;
 }
 
+.h-2\.5 {
+  height: 0.625rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
 .min-h-\[calc\(100vh-3rem\)\] {
   min-height: calc(100vh - 3rem);
 }
@@ -669,6 +725,18 @@ html {
 .w-max {
   width: -moz-max-content;
   width: max-content;
+}
+
+.w-2\.5 {
+  width: 0.625rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .max-w-\[calc\(100vw-2rem\)\] {
@@ -863,6 +931,10 @@ html {
   padding: 2rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .px-1\.5 {
   padding-left: 0.375rem;
   padding-right: 0.375rem;
@@ -933,6 +1005,10 @@ html {
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .outline-none {
@@ -1087,6 +1163,17 @@ html {
   border-color: rgb(238 42 123 / var(--tw-border-opacity, 1));
 }
 
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-cerise-strong:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(238 42 123 / var(--tw-ring-opacity, 1));
+}
+
 .enabled\:hover\:border-cerise-light:hover:enabled {
   --tw-border-opacity: 1;
   border-color: rgb(236 95 153 / var(--tw-border-opacity, 1));
@@ -1097,9 +1184,55 @@ html {
   border-color: rgb(238 42 123 / var(--tw-border-opacity, 1));
 }
 
+.enabled\:focus\:ring-2:focus:enabled {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
 .disabled\:text-gray-500:disabled {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
+.group:hover .group-hover\:border-cerise-light {
+  --tw-border-opacity: 1;
+  border-color: rgb(236 95 153 / var(--tw-border-opacity, 1));
+}
+
+.group\/bungus:hover .group-hover\/bungus\:border-cerise-light {
+  --tw-border-opacity: 1;
+  border-color: rgb(236 95 153 / var(--tw-border-opacity, 1));
+}
+
+.peer:checked ~ .peer-checked\:bg-cerise-strong {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 42 123 / var(--tw-bg-opacity, 1));
+}
+
+.peer:checked ~ .peer-checked\:bg-cerise-regular {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 61 132 / var(--tw-bg-opacity, 1));
+}
+
+.peer:checked ~ .peer-checked\:bg-cerise-light {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 95 153 / var(--tw-bg-opacity, 1));
+}
+
+.has-\[\:checked\]\:border-cerise-strong:has(:checked) {
+  --tw-border-opacity: 1;
+  border-color: rgb(238 42 123 / var(--tw-border-opacity, 1));
+}
+
+.has-\[\:checked\]\:bg-cerise-strong:has(:checked) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 42 123 / var(--tw-bg-opacity, 1));
+}
+
+.group:has(:hover) .group-has-\[\:hover\]\:border-cerise-light {
+  --tw-border-opacity: 1;
+  border-color: rgb(236 95 153 / var(--tw-border-opacity, 1));
 }
 
 @media (min-width: 768px) {
@@ -1169,10 +1302,72 @@ html {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.\[\&\>input\]\:pointer-events-none>input {
+  pointer-events: none;
+}
+
+.\[\&\>input\]\:absolute>input {
+  position: absolute;
+}
+
+.\[\&\>input\]\:opacity-0>input {
+  opacity: 0;
+}
+
 .\[\&\>p\]\:text-center>p {
   text-align: center;
 }
 
 .\[\&\>p\]\:leading-none>p {
   line-height: 1;
+}
+
+.\[\&\>span\]\:absolute>span {
+  position: absolute;
+}
+
+.\[\&\>span\]\:inset-1>span {
+  inset: 0.25rem;
+}
+
+.\[\&\>span\]\:flex>span {
+  display: flex;
+}
+
+.\[\&\>span\]\:h-4>span {
+  height: 1rem;
+}
+
+.\[\&\>span\]\:h-full>span {
+  height: 100%;
+}
+
+.\[\&\>span\]\:w-4>span {
+  width: 1rem;
+}
+
+.\[\&\>span\]\:w-full>span {
+  width: 100%;
+}
+
+.\[\&\>span\]\:items-center>span {
+  align-items: center;
+}
+
+.\[\&\>span\]\:justify-center>span {
+  justify-content: center;
+}
+
+.\[\&\>span\]\:border-2>span {
+  border-width: 2px;
+}
+
+.peer:checked ~ .\[\&\>span\]\:peer-checked\:bg-cerise-strong>span {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 42 123 / var(--tw-bg-opacity, 1));
+}
+
+.has-\[\:checked\]\:\[\&\>span\]\:bg-cerise-strong>span:has(:checked) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 42 123 / var(--tw-bg-opacity, 1));
 }
