--- a/templates/user.templ
+++ b/templates/user.templ
@@ -140,6 +140,68 @@ templ AccountSettingsForm(user models.User, errors map[string]string) {
 	</section>
 }
 
+templ RequestAccount() {
+	@page(templ.NopComponent) {
+		<form class="p-6 flex flex-col gap-4">
+			<label for="reference">
+				Reference: <span class="text-sm">(a person)</span>
+			</label>
+			<input type="text" id="reference" name="reference" class={ input }/>
+			<label for="reason">
+				Why do you need an account?
+				<br/>
+				I.e. which system(s) do you plan to interact with. Why? Is it related to some specific event?
+			</label>
+			<textarea name="reason" id="reason" class={ input }></textarea>
+			<label for="year-tag"><i>Årskurs</i> (optional)</label>
+			<input
+				type="text"
+				id="year-tag"
+				name="year-tag"
+				placeholder="e.g. D-21"
+				class={ input }
+			/>
+			<p>Do you have a KTH account?</p>
+			<div>
+				@radioButton(templ.Attributes{
+					"_":            "on click show <#kth-login/> then hide <#manual/>",
+					"autocomplete": "off",
+					"name":         "have-account",
+				}) {
+					Yes
+				}
+				<br/>
+				@radioButton(templ.Attributes{
+					"_":            "on click show <#manual/> then hide <#kth-login/>",
+					"autocomplete": "off",
+					"name":         "have-account",
+					"id":           "no-account",
+				}) {
+					No
+				}
+			</div>
+			<div id="kth-login" style="display: none">
+				<button class={ button }>Log in with KTH and submit request</button>
+			</div>
+			<div id="manual" style="display: none" class="flex flex-col gap-4">
+				<div class="flex items-center gap-2">
+					<label for="first-name">First name</label>
+					<input type="text" id="first-name" name="first-name" required class={ input }/>
+				</div>
+				<div class="flex items-center gap-2">
+					<label for="family-name">Family name</label>
+					<input type="text" id="family-name" name="family-name" required class={ input }/>
+				</div>
+				<div class="flex items-center gap-2">
+					<label for="email">Email address</label>
+					<input type="text" id="email" name="email" required class={ input }/>
+				</div>
+				<p>todo: passkeys</p>
+			</div>
+		</form>
+	}
+}
+
 templ AcceptInvite() {
 	@modal() {
 		<div class="p-8 flex flex-col gap-4">
