continue the form

--- a/templates/passkey.templ
+++ b/templates/passkey.templ
@@ -189,6 +189,7 @@ templ AddPasskeyForm(cc *protocol.CredentialCreation) {
 				type="text"
 				autofocus
 				name="name"
+				id="passkey-name"
 				class="
 					border border-neutral-500 grow
 					outline-none focus:border-cerise-strong hover:border-cerise-light
