--- a/pkg/static/public/style.dist.css
+++ b/pkg/static/public/style.dist.css
@@ -574,48 +574,29 @@ html {
   position: relative;
 }
 
-.inset-1 {
-  inset: 0.25rem;
-}
-
 .inset-0\.5 {
   inset: 0.125rem;
-}
-
-.inset-\[3px\] {
-  inset: 3px;
-}
-
-.inset-\[2px\] {
-  inset: 2px;
 }
 
 .col-span-full {
   grid-column: 1 / -1;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .ml-auto {
   margin-left: auto;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
 }
 
 .mr-1 {
   margin-right: 0.25rem;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .block {
@@ -654,6 +635,10 @@ html {
   height: 60%;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-40 {
   height: 10rem;
 }
@@ -674,18 +659,6 @@ html {
   height: 100%;
 }
 
-.h-2\.5 {
-  height: 0.625rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
 .min-h-\[calc\(100vh-3rem\)\] {
   min-height: calc(100vh - 3rem);
 }
@@ -700,6 +673,10 @@ html {
 
 .w-3\/5 {
   width: 60%;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .w-5 {
@@ -727,24 +704,16 @@ html {
   width: max-content;
 }
 
-.w-2\.5 {
-  width: 0.625rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
 .max-w-\[calc\(100vw-2rem\)\] {
   max-width: calc(100vw - 2rem);
 }
 
 .max-w-lg {
   max-width: 32rem;
+}
+
+.max-w-xl {
+  max-width: 36rem;
 }
 
 .shrink-0 {
@@ -819,6 +788,10 @@ html {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-x-2 {
@@ -919,6 +892,10 @@ html {
   padding: 0.375rem;
 }
 
+.p-12 {
+  padding: 3rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -927,12 +904,12 @@ html {
   padding: 1rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .px-1\.5 {
@@ -965,6 +942,15 @@ html {
   text-align: right;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -980,8 +966,16 @@ html {
   line-height: 1.75rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .uppercase {
   text-transform: uppercase;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
 
 .italic {
@@ -1009,6 +1003,12 @@ html {
 
 .opacity-0 {
   opacity: 0;
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline-none {
@@ -1163,17 +1163,6 @@ html {
   border-color: rgb(238 42 123 / var(--tw-border-opacity, 1));
 }
 
-.focus\:ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-cerise-strong:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(238 42 123 / var(--tw-ring-opacity, 1));
-}
-
 .enabled\:hover\:border-cerise-light:hover:enabled {
   --tw-border-opacity: 1;
   border-color: rgb(236 95 153 / var(--tw-border-opacity, 1));
@@ -1184,35 +1173,9 @@ html {
   border-color: rgb(238 42 123 / var(--tw-border-opacity, 1));
 }
 
-.enabled\:focus\:ring-2:focus:enabled {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .disabled\:text-gray-500:disabled {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
-}
-
-.group:hover .group-hover\:border-cerise-light {
-  --tw-border-opacity: 1;
-  border-color: rgb(236 95 153 / var(--tw-border-opacity, 1));
-}
-
-.group\/bungus:hover .group-hover\/bungus\:border-cerise-light {
-  --tw-border-opacity: 1;
-  border-color: rgb(236 95 153 / var(--tw-border-opacity, 1));
-}
-
-.peer:checked ~ .peer-checked\:bg-cerise-strong {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 42 123 / var(--tw-bg-opacity, 1));
-}
-
-.peer:checked ~ .peer-checked\:bg-cerise-regular {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 61 132 / var(--tw-bg-opacity, 1));
 }
 
 .peer:checked ~ .peer-checked\:bg-cerise-light {
@@ -1223,16 +1186,6 @@ html {
 .has-\[\:checked\]\:border-cerise-strong:has(:checked) {
   --tw-border-opacity: 1;
   border-color: rgb(238 42 123 / var(--tw-border-opacity, 1));
-}
-
-.has-\[\:checked\]\:bg-cerise-strong:has(:checked) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 42 123 / var(--tw-bg-opacity, 1));
-}
-
-.group:has(:hover) .group-has-\[\:hover\]\:border-cerise-light {
-  --tw-border-opacity: 1;
-  border-color: rgb(236 95 153 / var(--tw-border-opacity, 1));
 }
 
 @media (min-width: 768px) {
@@ -1302,72 +1255,10 @@ html {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.\[\&\>input\]\:pointer-events-none>input {
-  pointer-events: none;
-}
-
-.\[\&\>input\]\:absolute>input {
-  position: absolute;
-}
-
-.\[\&\>input\]\:opacity-0>input {
-  opacity: 0;
-}
-
 .\[\&\>p\]\:text-center>p {
   text-align: center;
 }
 
 .\[\&\>p\]\:leading-none>p {
   line-height: 1;
-}
-
-.\[\&\>span\]\:absolute>span {
-  position: absolute;
-}
-
-.\[\&\>span\]\:inset-1>span {
-  inset: 0.25rem;
-}
-
-.\[\&\>span\]\:flex>span {
-  display: flex;
-}
-
-.\[\&\>span\]\:h-4>span {
-  height: 1rem;
-}
-
-.\[\&\>span\]\:h-full>span {
-  height: 100%;
-}
-
-.\[\&\>span\]\:w-4>span {
-  width: 1rem;
-}
-
-.\[\&\>span\]\:w-full>span {
-  width: 100%;
-}
-
-.\[\&\>span\]\:items-center>span {
-  align-items: center;
-}
-
-.\[\&\>span\]\:justify-center>span {
-  justify-content: center;
-}
-
-.\[\&\>span\]\:border-2>span {
-  border-width: 2px;
-}
-
-.peer:checked ~ .\[\&\>span\]\:peer-checked\:bg-cerise-strong>span {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 42 123 / var(--tw-bg-opacity, 1));
-}
-
-.has-\[\:checked\]\:\[\&\>span\]\:bg-cerise-strong>span:has(:checked) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 42 123 / var(--tw-bg-opacity, 1));
 }
