--- a/templates/user.templ
+++ b/templates/user.templ
@@ -11,7 +11,7 @@ templ Index(devLogin func() templ.Component) {
 			<img class="h-40 pb-4 block" src="/public/skold_vit.svg"/>
 			<a
 				autofocus
-				href="/login/oidc/kth"
+				href="/oidc/kth/login"
 				class="
 					bg-[#3f4c66] p-1.5 block rounded border text-center
 					select-none border-transparent outline-none
@@ -142,40 +142,52 @@ templ AccountSettingsForm(user models.User, errors map[string]string) {
 
 templ RequestAccount() {
 	@page(templ.NopComponent) {
-		<form class="p-6 flex flex-col gap-4">
+		<header class="p-12 max-w-xl mx-auto">
+			<h1 class="text-2xl font-bold text-center capitalize pb-4">Request account</h1>
+			<p class="text-justify">
+				Bla bla Datasektionen account is used for all systems by Datasektionen bla bla. You
+				can have it even if you don't be the Datasektionen member if you request one here.
+				You can get it removed or some shit if you email the god damn Dr. Ek.
+			</p>
+		</header>
+		<form class="p-6 flex flex-col gap-4" hx-post="/request-account">
 			<label for="reference">
 				Reference: <span class="text-sm">(a person)</span>
 			</label>
-			<input type="text" id="reference" name="reference" class={ input }/>
+			<input type="text" id="reference" name="reference" required class={ input }/>
 			<label for="reason">
 				Why do you need an account?
 				<br/>
-				I.e. which system(s) do you plan to interact with. Why? Is it related to some specific event?
+				I.e. which system(s) do you plan to interact with. Is it related to some specific event?
 			</label>
-			<textarea name="reason" id="reason" class={ input }></textarea>
+			<textarea name="reason" id="reason" required class={ input }></textarea>
 			<label for="year-tag"><i>Årskurs</i> (optional)</label>
 			<input
 				type="text"
 				id="year-tag"
 				name="year-tag"
 				placeholder="e.g. D-21"
+				required
 				class={ input }
 			/>
 			<p>Do you have a KTH account?</p>
 			<div>
 				@radioButton(templ.Attributes{
-					"_":            "on click show <#kth-login/> then hide <#manual/>",
+					// Since the input fields in #manual are required, we set their type to hidden
+					// because otherwise you can't submit the form
+					"_":            "on click show <#kth-login/> then hide <#manual/> then set <#manual input/>'s type to 'hidden'",
 					"autocomplete": "off",
-					"name":         "have-account",
+					"name":         "have-kth-account",
+					"value":        "yes",
 				}) {
 					Yes
 				}
 				<br/>
 				@radioButton(templ.Attributes{
-					"_":            "on click show <#manual/> then hide <#kth-login/>",
+					"_":            "on click show <#manual/> then set <#manual input/>'s type to 'text' then hide <#kth-login/>",
 					"autocomplete": "off",
-					"name":         "have-account",
-					"id":           "no-account",
+					"name":         "have-kth-account",
+					"value":        "no",
 				}) {
 					No
 				}
@@ -196,9 +208,32 @@ templ RequestAccount() {
 					<label for="email">Email address</label>
 					<input type="text" id="email" name="email" required class={ input }/>
 				</div>
-				<p>todo: passkeys</p>
+				<div class="flex flex-col gap-2">
+					// This is in a shadow DOM because otherwise little HTML gets confused that
+					// there is a form in a form.
+					<template shadowrootmode="open">
+						@base() {
+							<label for="passkey-name">
+								Register a passkey. This will be your only login method
+								in your account, but you will be able to add more once you get it.
+							</label>
+							@AddPasskeyForm(nil)
+						}
+					</template>
+				</div>
 			</div>
 		</form>
+	}
+}
+
+templ AccountRequestDone() {
+	@modal() {
+		<div class="p-8 flex flex-col gap-4">
+			<h1 class="text-2xl font-bold text-center capitalize pb-4">Account request complete</h1>
+			<p>
+				Thank you for requesting an account. You will receive an E-mail when your request has been accepted or denied.
+			</p>
+		</div>
 	}
 }
 
@@ -208,7 +243,7 @@ templ AcceptInvite() {
 			<img class="h-40 pb-4 block" src="/public/skold_vit.svg"/>
 			<a
 				autofocus
-				href="/login/oidc/kth"
+				href="/oidc/kth/login"
 				class="
 					bg-[#3f4c66] p-1.5 block rounded border text-center
 					select-none border-transparent outline-none
