--- a/templates/admin.templ
+++ b/templates/admin.templ
@@ -10,6 +10,7 @@ templ adminNav() {
 	<a href="/admin/members">Members</a>
 	<a href="/admin/oidc-clients">OIDC Clients</a>
 	<a href="/admin/invites">Invites</a>
+	<a href="/admin/account-requests">Account Requests</a>
 }
 
 templ AdminPage() {
