--- a/pkg/static/public/style.dist.css
+++ b/pkg/static/public/style.dist.css
@@ -742,28 +742,12 @@ html {
   grid-template-columns: repeat(4,auto);
 }
 
-.grid-cols-subgrid {
-  grid-template-columns: subgrid;
-}
-
-.grid-cols-\[auto\2c auto\2c 1fr\2c auto\2c auto\2c auto\] {
-  grid-template-columns: auto auto 1fr auto auto auto;
-}
-
-.grid-cols-7 {
-  grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
 .grid-cols-\[repeat\(6\2c auto\)_max-content\] {
   grid-template-columns: repeat(6,auto) max-content;
 }
 
-.grid-cols-\[repeat\(6\2c auto\)repeat\(2\2c max-content\)\] {
-  grid-template-columns: repeat(6,auto)repeat(2,max-content);
-}
-
-.grid-cols-\[repeat\(6\2c auto\)_repeat\(2\2c max-content\)\] {
-  grid-template-columns: repeat(6,auto) repeat(2,max-content);
+.grid-cols-subgrid {
+  grid-template-columns: subgrid;
 }
 
 .flex-col {
@@ -776,10 +760,6 @@ html {
 
 .place-items-center {
   place-items: center;
-}
-
-.content-stretch {
-  align-content: stretch;
 }
 
 .items-start {
@@ -825,10 +805,6 @@ html {
 
 .overflow-auto {
   overflow: auto;
-}
-
-.overflow-hidden {
-  overflow: hidden;
 }
 
 .overflow-x-hidden {
@@ -1208,12 +1184,8 @@ html {
   background-color: rgb(255 255 255 / 0.05);
 }
 
-.hover\:overflow-visible:hover {
-  overflow: visible;
-}
-
-.hover\:whitespace-normal:hover {
-  white-space: normal;
+.hover\:whitespace-pre-line:hover {
+  white-space: pre-line;
 }
 
 .hover\:border-cerise-light:hover {
@@ -1225,17 +1197,9 @@ html {
   text-decoration-line: underline;
 }
 
-.focus\:whitespace-normal:focus {
-  white-space: normal;
-}
-
 .focus\:border-cerise-strong:focus {
   --tw-border-opacity: 1;
   border-color: rgb(238 42 123 / var(--tw-border-opacity));
-}
-
-.active\:whitespace-normal:active {
-  white-space: normal;
 }
 
 .enabled\:hover\:border-cerise-light:hover:enabled {
